# new_configs

./: .gitignore  READme.md  blackarch.txt  change_theme.sh  copy_configs.sh  install.sh  installation_first_attempt.txt  pacman.txt  test.sh  txt  vscodium_extentions.txt  wallpapers.sh  wallpapers.txt  xorg.conf  yay.txt
.config/: starship.toml
.config/alacritty/: alacritty.toml  colors.toml
.config/atuin/: atuin-receipt.json  config.toml
.config/dunst/: dunstrc
.config/gtk-3.0/: bookmarks  gtk.css  settings.ini
.config/gtk-4.0/: gtk.css  servers  settings.ini
.config/hypr/: hyprexpo.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  keybindings.conf  monitors.conf  programs.conf  theme.conf  theme.conf.bak  window_rules.conf
Colloid-gtk-theme/: install.sh
Colloid-icon-theme/: install.sh
i3/i3/: config
scripts/: Cargo.toml
scripts/active/: active.json  alacritty.toml  bar_config  colors  colors.ini  config.kdl  config.py  dunstrc  gtk.scss  hyprland.conf  install.sh  rofi.rasi  starship.toml  wallpaper  waybar.css  waybar.jsonc  wlogout.css  zellij.kdl
scripts/src/: change_theme.rs  gtk_theme.rs  main.rs  templating.rs
scripts/templates/: alacritty.toml  bar_config  catppuccin-mocha.tmuxtheme  colors  dunstrc  gtk.scss  hyprland.conf  hyprland.lua  icons_theme_install.sh  json.json  qute.py  rofi.rasi  waybar.css  waybar.jsonc  wlogout.css  zellij.kdl
scripts/themes/favs/: catpuccin_mocha.json
themes/: catppucin.json  catppucin_custom.json  dracula.json  nord.json  rosepine.json  tokyonight.json
vscodium/: keybindings.json  settings.json
(+51 files in other folders)
