[package]
name = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "change_theme"
path = "src/change_theme.rs"



[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
handlebars = "4.3.7"
rand = "0.8.5"
array2d = "0.3.0"